<resources>
    <string name="app_name">Halaman Login PAM</string>
    <string name="login_title">Selamat Datang</string>
    <string name="login_subtitle">Silakan masuk ke akun Anda</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="button_login">Masuk</string>
    <string name="login_success">Login Berhasil!</string>
    <string name="login_failed">Username atau Password salah</string>
    <string name="empty_fields_error">Username dan password tidak boleh kosong</string>

    <string name="home_title">Halaman Utama</string>
    <string name="profile_header">Profil Saya</string>
    <string name="label_nama">Nama Lengkap</string>
    <string name="val_nama">Damar</string>
    <string name="label_username">Username</string>
    <string name="username_format">\@%1$s</string>
    <string name="label_status">Status</string>
    <string name="val_status">Mahasiswa PAM</string>
    <string name="button_logout">Keluar</string>
</resources>